# hello-minio-docker

./: .gitignore  Dockerfile.etl  README.md  docker-compose.yml  pyproject.toml  sample_data.csv  try_minio_with_pyspark.py  try_minio_with_python.py
