[tool.poetry]
name = "spark-etl"
version = "0.1.0"
description = "This is Spark ETL with PostgreSQL, Hive & MinIO and should be automated using Airflow."
authors = ["Codename Oliver"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.0"
psycopg2-binary = "^2.9.9"
boto3 = "^1.29.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"